// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BooleanInput /> with no props 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="True"
  >
    True
  </option>
  <option
    value="False"
  >
    False
  </option>
</select>
`;

exports[`<BooleanInput /> with placeholder option text 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select true or false
  </option>
  <option
    value="True"
  >
    True
  </option>
  <option
    value="False"
  >
    False
  </option>
</select>
`;

exports[`<BooleanInput /> with required  1`] = `
<select
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    disabled={true}
    value=""
  >
    Select an option
  </option>
  <option
    value="True"
  >
    True
  </option>
  <option
    value="False"
  >
    False
  </option>
</select>
`;

exports[`Boolean input with invalid initial value 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="True"
  >
    True
  </option>
  <option
    value="False"
  >
    False
  </option>
</select>
`;

exports[`Boolean input with valid initial value 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value="True"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="True"
  >
    True
  </option>
  <option
    value="False"
  >
    False
  </option>
</select>
`;
